--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "devDependencies": {
     "prettier": "^3.3.2"
-  }
+  },
+  "name": "arithmetic",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
